kubernetes/external/home-assistant/endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant
  namespace: external
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
ports:
  - name: http
    appProtocol: http
    protocol: TCP
    port: 8123
endpoints:
  - addresses:
      - "10.10.1.3"
