kubernetes/external/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: external
spec:
  ports:
  - name: http
    port: 8192
    targetPort: 8192
