kubernetes/external/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: external
  annotations:
    kubernetes.io/ingress.class: traefik
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Home Assistant
    gethomepage.dev/group: Home
    gethomepage.dev/icon: home-assistant
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: 'traefik-forwardauth-authelia@kubernetescrd'
spec:
  tls:
    - secretName: hass.saturn.ci
      hosts:
        - hass.saturn.ci
  rules:
    - host: hass.saturn.ci
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 80
